--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -2,21 +2,68 @@
     width: 100%;
     padding: 30px 20px 0 20px;
 
-    h1 {
-        text-align: center;
-        font-size: 20px;
+    .home__header {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .home__header__addData {
+            margin-top: 15px;
+            display: flex;
+            gap: 20px;
+            align-items: center;
+    
+            .home__addData__btn {
+                width: 150px;
+                text-align: center;
+                padding: 10px 5px;
+                border-radius: 4px;
+                font-size: 13px;
+                color: #fff;
+                background-color: #585858;
+            }
+    
+            .home__header__addData h2 {
+                font-size: 16px;
+            }
+        }
+
+        h1 {
+            // text-align: center;
+            font-size: 23px;
+        }
+
+        .home__header__classInput {
+            // position: absolute;
+            // top: 0;
+            // right: 0;
+            padding: 10px 15px;
+            width: 350px;
+            color: #000;
+            background-color: #e7e1e1;
+            border-radius: 2px;
+        }
+
     }
-    h2 {
-        font-size: 16px;
-    }
+    
+    
+    
 
     .home__wrapper {
-        margin-top: 40px;
+        margin-top: 60px;
         display: grid;
         grid-template-columns: 1fr auto 1fr;
         gap: 20px; /* Отступы между блоками */
         align-items: center;
         gap: 40px;
+
+        .noResults {
+            text-align: left;
+            font-size: 18px;
+            color: gray;
+            margin-top: 20px;
+        }        
 
         .home__block {
             cursor: pointer;
@@ -27,18 +74,59 @@
             transition: 0.2s ease-in;
             box-shadow: 0 0px 15px 3px #ffffff14;
             
+            &.statement {
+                position: relative;
+                background-image: url("../../img/examStatement.jpg");
+                background-size: cover; /* Изображение будет охватывать весь блок */
+                background-position: top; /* Центрирование изображения */
+                background-repeat: no-repeat;
+            }
+            &.statement::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.657); 
+                z-index: 1; 
+                border-radius: 10px;
+            }
+
+            &.grades {
+                position: relative;
+                background-image: url("../../img/diplom.jpg");
+                background-size: cover; /* Изображение будет охватывать весь блок */
+                background-position: center; /* Центрирование изображения */
+                background-repeat: no-repeat;
+
+            }
+
+            &.grades::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.657); 
+                z-index: 1; 
+                border-radius: 10px;
+            }
+
             &:nth-child(3n) {
                 // grid-column: 3; 
                 justify-self: end;
 
             }
             .home__textTitle {
+                position: relative; /* Убедитесь, что у текста есть относительное позиционирование */
+                z-index: 2; /* Установите z-index выше оверлея */
                 padding: 10px 0 20px 0;
-                font-size: 20px;
+                font-size: 24px;
                 text-align: center;
-
-                //Заменить
-                color: rgb(32, 32, 32);
+                font-weight: 500;
+                color: rgb(232, 232, 232);
             }
 
             &:hover {
