--- a/src/components/DiplomSupplement/diplomSupplement.module.scss
+++ b/src/components/DiplomSupplement/diplomSupplement.module.scss
@@ -1,72 +1,191 @@
 .supplement {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  padding: 30px 20px 0 20px;
+
+  .supplement__header {
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    min-height: 100vh;
-    padding: 30px 20px 0 20px;
+    align-items: center;
+    margin-bottom: 40px;
 
-    .supplement__header {
-        display: flex;
-        align-items: center;
-        margin-bottom: 40px;
+    .supplement__header__img {
+      cursor: pointer;
+      padding: 6px;
 
-        .supplement__header__img {
-            cursor: pointer;
-            padding: 6px;
+      border-radius: 20%;
+      transition: 0.2s ease-in;
 
-            border-radius: 20%;
-            transition: 0.2s ease-in;
+      .supplement__header__arrow {
+        flex-shrink: 0;
+        width: 24px;
+        height: 24px;
+      }
+      &:hover {
+        background-color: #555555;
+      }
+    }
+    h1 {
+      flex-grow: 1;
+      font-size: 20px;
+      text-align: center;
+    }
+  }
 
-            .supplement__header__arrow {
-                flex-shrink: 0;
-                width: 24px;
-                height: 24px;
-            }
-            &:hover {
-                background-color: #555555;
-            }
-        }
-        h1 {
-            flex-grow: 1;
-            font-size: 20px;
-            text-align: center;
-        }
+  .supplement__wrapper {
+    flex: 1;
+
+    .supplement__wrapper__rowInput {
+      display: flex;
+      align-items: center;
+      gap: 50px;
+      margin: 0px 0 15px 0;
+
+      .rowInput__classInput {
+        padding: 10px 5px;
+        border-radius: 4px;
+      }
     }
 
-    .supplement__wrapper {
+    .supplement__wrapper__rowSelect {
+      display: flex;
+      align-items: center;
+      gap: 40px;
+      margin-bottom: 25px;
 
+      .rowSelect__groupSelect {
+        padding: 10px 5px;
+        border-radius: 4px;
+      }
 
-        .supplement__tableWrapper {
-            max-height: 430px;
-            overflow-y: auto;
-            border-top: 1px solid #ccc;
-            border-bottom: 1px solid #ccc;
-      
-            .supplement__table {
-              width: 100%;
-              border-collapse: collapse;
-      
-              th,
-              td {
-                padding: 12px;
-                border: 1px solid #ddd;
-                text-align: left;
-              }
-      
-              th {
-                background-color: #5b5b5b;
-                color: white;
-                font-weight: bold;
-              }
-      
-              tr:nth-child(even) {
-                background-color: #181818;
-              }
-      
-              tr:hover {
-                background-color: #2a2a2a;
-              }
+      button {
+        padding: 10px 5px;
+        width: 150px;
+        border-radius: 4px;
+      }
+    }
+
+    .supplement__tableWrapper {
+      max-height: 430px;
+      overflow-y: auto;
+      border-top: 1px solid #ccc;
+      border-bottom: 1px solid #ccc;
+      margin-bottom: 20px;
+
+      .supplement__table {
+        width: 100%;
+        border-collapse: collapse;
+
+        th,
+        td {
+          padding: 12px;
+          border: 1px solid #ddd;
+          text-align: left;
+        }
+
+        th {
+          background-color: #5b5b5b;
+          color: white;
+          font-weight: bold;
+        }
+
+        tr:nth-child(even) {
+          background-color: #181818;
+        }
+
+        tr:hover {
+          background-color: #2a2a2a;
+        }
+      }
+    }
+
+    .supplement__tableWrapperAdd__add {
+      max-height: 500px;
+      overflow-y: auto;
+      border-bottom: 1px solid #ccc;
+      border-top: 1px solid #ccc;
+      padding-top: 10px;
+
+      .supplement__tableWrapperAdd {
+        max-height: 430px;
+        overflow-y: auto;
+        // border-top: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
+        margin-bottom: 20px;
+        margin-bottom: 15px;
+
+        .supplement__tableWrapperAdd__input {
+          display: flex;
+          flex-direction: column;
+          margin-bottom: 10px;
+        }
+        .supplement__tableWrapperAdd__button {
+          display: flex;
+          flex-direction: column;
+          margin-bottom: 10px;
+
+          h3 {
+            margin-bottom: 5px;
+          }
+
+          .tableWrapperAdd__button {
+            display: flex;
+            gap: 15px;
+            margin-top: 5px;
+
+            button {
+              padding: 6px 5px;
+              width: 150px;
+              border-radius: 4px;
             }
           }
+        }
+
+        .supplement__table {
+          width: 100%;
+          border-collapse: collapse;
+
+          th,
+          td {
+            padding: 12px;
+            border: 1px solid #ddd;
+            text-align: left;
+          }
+
+          th {
+            background-color: #5b5b5b;
+            color: white;
+            font-weight: bold;
+          }
+
+          tr:nth-child(even) {
+            background-color: #181818;
+          }
+
+          tr:hover {
+            background-color: #2a2a2a;
+          }
+        }
+      }
     }
+  }
+
+  .supplement__footer {
+    margin: 5px 0 45px 0;
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+
+    button {
+      position: fixed;
+      bottom: 10px;
+      padding: 10px 5px;
+      width: 280px;
+      border-radius: 4px;
+      font-size: 17px;
+    }
+  }
 }
