--- a/src/components/Statement/statement.module.scss
+++ b/src/components/Statement/statement.module.scss
@@ -1,3 +1,5 @@
+@use "../../styles/globalStyles" as *;
+
 .statement {
     display: flex;
     flex-direction: column;
@@ -11,6 +13,7 @@
         margin-bottom: 40px;
 
         .statement__header__img {
+            color: $svg-color;
             cursor: pointer;
             padding: 6px;
 
@@ -23,13 +26,15 @@
                 height: 24px;
             }
             &:hover {
-                background-color: #555555;
+                background-color: $svg-color;
+                color: $light-text-colot;
             }
         }
         h1 {
             flex-grow: 1;
-            font-size: 20px;
+            // font-size: 20px;
             text-align: center;
+            @include titleText;
         }
     }
 
@@ -37,59 +42,38 @@
         flex: 1;
 
         .statement__wrapper__classInput {
-            padding: 10px 15px;
+            // padding: 10px 15px;
+            
+            // color: #000;
+            // background-color: #e7e1e1;
+            // border-radius: 2px;
+            @include input-style;
             width: 350px;
-            color: #000;
-            background-color: #e7e1e1;
-            border-radius: 2px;
         }
 
         .statement__wrapper__Row {
             display: flex;
             align-items: center;
             gap: 30px;
-            margin: 20px 0 30px 0;
+            margin: 20px 0 20px 0;
+            padding-bottom: 10px;
+            border-bottom: 1px solid $border-color;
 
             .statement__wrapper__group {
                 position: relative;
 
-                .statement__wrapper__groupInput {
-                    padding: 10px 15px;
-                    width: 350px;
-                    color: #000;
-                    background-color: #e7e1e1;
-                    border-radius: 2px;
+                .statement__wrapper__groupSelect {
+                    @include select-style;
                 }
 
-                .dropdownList {
-                    position: absolute;
-                    top: 109%;
-                    left: 0;
-                    right: 0;
-                    background-color: #fff;
-                    border: 1px solid #949393;
-                    max-height: 150px;
-                    overflow-y: auto;
-                    z-index: 1;
-
-                    .dropdownItem {
-                        color: #555555;
-                        padding: 10px;
-                        cursor: pointer;
-                    }
-
-                    .dropdownItem:hover {
-                        background-color: #eee;
-                    }
-                }
             }
 
             .statement__wrapper__curs {
                 .statement__wrapper__cursInput {
                     padding: 10px 15px;
+                    @include input-style;
+                    // border-radius: 2px;
                     width: 100px;
-                    color: #000;
-                    background-color: #e7e1e1;
                     border-radius: 2px;
                 }
             }
@@ -97,9 +81,8 @@
             .statement__wrapper__semester {
                 .statement__wrapper__semesterInput {
                     padding: 10px 15px;
+                    @include input-style;
                     width: 100px;
-                    color: #000;
-                    background-color: #e7e1e1;
                     border-radius: 2px;
                 }
             }
@@ -163,15 +146,17 @@
         // }
 
         .statement__tableWrapper {
-            max-height: 400px; /* Ограничиваем высоту */
-            overflow-y: auto; /* Добавляем вертикальный скролл при необходимости */
-            border: 1px solid #ccc; /* Граница вокруг таблицы */
+            max-height: 400px;
+            overflow-y: auto;
+            border: 1px solid #ccc; 
             border-radius: 8px;
         }
 
         .statement__table {
             width: 100%;
             border-collapse: collapse;
+
+            @extend .table;
         }
 
         // .statement__table td {
@@ -183,7 +168,7 @@
         // }
         .id__col {
             width: 5%;
-            border-right: 1px solid #ccc;
+            // border-right: 1px solid #ccc;
         }
 
         .fio__col {
@@ -192,14 +177,13 @@
             & input {
                 padding: 5px 5px;
                 width: 100%;
-                background-color: #555555;
             }
         }
 
         .statement__table th,
         .statement__table td {
             padding: 10px;
-            border-bottom: 1px solid #ddd;
+            // border-bottom: 1px solid #ddd;
             text-align: left;
 
             // & td :last-child,
