--- a/src/pages/AddData/addData.module.scss
+++ b/src/pages/AddData/addData.module.scss
@@ -1,3 +1,5 @@
+@use "../../styles/globalStyles" as *;
+
 .addData {
     display: flex;
     flex-direction: column;
@@ -12,6 +14,7 @@
 
         .addData__header__img {
             cursor: pointer;
+            color: $svg-color;
             padding: 6px;
             border-radius: 20%;
             transition: 0.2s ease-in;
@@ -23,14 +26,16 @@
             }
             
             &:hover {
-                background-color: #555555;
+                background-color: $svg-color;
+                color: $light-text-colot;
             }
         }
 
         h1 {
             flex-grow: 1;
-            font-size: 20px;
+            // font-size: 20px;
             text-align: center;
+            @include titleText;
         }
     }
 
