--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -1,48 +1,58 @@
+@use "../../styles/globalStyles" as *;
+
 .home {
     width: 100%;
     padding: 30px 20px 0 20px;
+    color: $main-text-color;
 
     .home__header {
         position: relative;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        border-bottom: 1px solid $border-color;
+        padding-bottom: 20px;
 
         .home__header__addData {
-            margin-top: 15px;
             display: flex;
             gap: 20px;
             align-items: center;
     
             .home__addData__btn {
-                width: 150px;
-                text-align: center;
-                padding: 10px 5px;
-                border-radius: 4px;
-                font-size: 13px;
-                color: #fff;
-                background-color: #585858;
+                // width: 150px;
+                // text-align: center;
+                // padding: 10px 5px;
+                // border-radius: 4px;
+                // font-size: 13px;
+                // color: $light-text-colot;
+                // background-color: #585858;
+                @include button-style;
+                
             }
     
-            .home__header__addData h2 {
+            h2 {
                 font-size: 16px;
+                white-space: nowrap;
             }
         }
 
         h1 {
             // text-align: center;
-            font-size: 23px;
+            @include titleText;
         }
 
         .home__header__classInput {
             // position: absolute;
             // top: 0;
             // right: 0;
-            padding: 10px 15px;
+
+            // padding: 10px 15px;
+            
+            // color: #000;
+            // background-color: #e7e1e1;
+            // border-radius: 2px;
+            @include inputSearch-style;
             width: 350px;
-            color: #000;
-            background-color: #e7e1e1;
-            border-radius: 2px;
         }
 
     }
@@ -51,17 +61,23 @@
     
 
     .home__wrapper {
-        margin-top: 60px;
-        display: grid;
-        grid-template-columns: 1fr auto 1fr;
-        gap: 20px; /* Отступы между блоками */
-        align-items: center;
+        margin-top: 40px;
+
+        //Grid
+
+        // display: grid;
+        // grid-template-columns: 1fr auto 1fr;
+        // align-items: center;
+        // gap: 40px;
+        display: flex;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
         gap: 40px;
 
         .noResults {
-            text-align: left;
+            // text-align: left;
             font-size: 18px;
-            color: gray;
+            color: $input-text-color;
             margin-top: 20px;
         }        
 
@@ -69,16 +85,16 @@
             cursor: pointer;
             width: 400px;
             height: 250px;
-            background-color: aliceblue;
+            background-color: $background-color;
             border-radius: 10px;
             transition: 0.2s ease-in;
-            box-shadow: 0 0px 15px 3px #ffffff14;
+            box-shadow: 0 4px 16px 10px #4949494d;
             
             &.statement {
                 position: relative;
                 background-image: url("../../img/examStatement.jpg");
-                background-size: cover; /* Изображение будет охватывать весь блок */
-                background-position: top; /* Центрирование изображения */
+                background-size: cover; 
+                background-position: top; 
                 background-repeat: no-repeat;
             }
             &.statement::before {
