--- a/src/styles/_globalStyles.scss
+++ b/src/styles/_globalStyles.scss
@@ -1,10 +1,12 @@
 $main-text-color: #242424;
 $light-text-colot: #fff;
 $input-text-color: #5C6C79;
+$menuBar-text-color: #464646;
 
 $svg-color: #114C59;
 
 $border-color: #00000020;
+$borderLight-color: #9c9c9c7b;
 
 
 $background-color-content: #EFF3F4;
