--- a/src/styles/_globalStyles.scss
+++ b/src/styles/_globalStyles.scss
@@ -1,25 +1,23 @@
 $main-text-color: #242424;
 $light-text-colot: #fff;
-$input-text-color: #5C6C79;
+$input-text-color: #5c6c79;
 $menuBar-text-color: #464646;
 
-$svg-color: #114C59;
+$svg-color: #114c59;
 
 $border-color: #00000020;
 $borderLight-color: #9c9c9c7b;
 
-
-$background-color-content: #EFF3F4;
-$background-color: #114C59;
-$background-color-2: #FFD65F;
+$background-color-content: #eff3f4;
+$background-color: #114c59;
+$background-color-2: #2a5c6857;
+// $background-color-2: #ffd65f;
 
 $background-hover-color: #07242a;
 $background-color-select: #e7e1e1;
 $background-color-input: #e7e1e1;
 
-
 $box-shadow-color: #4949494d;
-
 
 @mixin select-style {
     cursor: pointer;
@@ -59,11 +57,11 @@ $box-shadow-color: #4949494d;
 
 @mixin button-style {
     text-align: center;
-    width: 100%;
     border-radius: 6px;
     padding: 10px 5px;
     font-size: 15px;
     color: $light-text-colot;
+
     background-color: $background-color;
     font-weight: 600;
     box-shadow: 0 4px 16px 10px $box-shadow-color;
@@ -75,31 +73,67 @@ $box-shadow-color: #4949494d;
 }
 
 @mixin button-sub-style {
-    text-align: center;
-    border-radius: 6px;
-    padding: 10px 5px;
-    font-size: 15px;
-    color: $light-text-colot;
+    
 
-    background-color: $background-color;
+    cursor: pointer;
+    padding: 10px 5px;
+    color: $main-text-color;
+    background-color: $background-color-select;
     font-weight: 600;
+    border-radius: 4px;
     box-shadow: 0 4px 16px 10px $box-shadow-color;
-    transition: 0.3s ease-in;
+    transition: 0.3s ease-in-out;
 
     &:hover {
-        background-color: $background-hover-color;
+        background-color: $background-color;
+        color: #fff;
     }
 }
-
 
 .table {
     width: 100%;
     border-collapse: collapse;
     cursor: pointer;
 
+    .tableCheckBox {
+        width: 16px; 
+        height: 16px;
+        cursor: pointer;
+    }
+
+    .table__button {
+        cursor: default;
+        display: flex;
+        justify-content: center;
+        gap: 25px;
+        background-color: $background-color-content;
+
+        .table__btn {
+            background-color: $background-color;
+            padding: 5px;
+            border-radius: 5px;
+
+            transition: 0.2s ease-in;
+
+            .table__btn__Arrow {
+                color: $light-text-colot;
+                width: 24px;
+                height: 24px;
+            }
+
+            &:hover {
+                background-color: $border-color;
+
+                .table__btn__Arrow {
+                    color: $background-color;
+                }
+            }
+        }
+    }
+
     th,
     td {
-        padding: 12px;
+        padding: 12px 12px;
         border: 1px solid $border-color;
         text-align: left;
         border-bottom: 0px;
@@ -121,7 +155,6 @@ $box-shadow-color: #4949494d;
     tr:nth-child(even) {
         color: $light-text-colot;
         background-color: $background-color;
-        
 
         &:hover {
             color: $background-color;
