--- a/src/components/NavPanel/navPanel.module.scss
+++ b/src/components/NavPanel/navPanel.module.scss
@@ -20,6 +20,6 @@
         // &:hover {
         //     background-color: rgb(148, 148, 148);
         // }
-        @include button-sub-style;
+        @include button-style;
     }
 }
